fix chatroom display overflow got behind footer issue.Changed to fixed and added padding to content wrapper

--- a/client/TaskHeroes/src/app/shared/ui-components/footer/footer.component.scss
+++ b/client/TaskHeroes/src/app/shared/ui-components/footer/footer.component.scss
@@ -4,7 +4,8 @@ footer {
     text-align: center;
     padding: 10px 0;
     font-size: 0.9em;
-    position: sticky;
+    position: fixed;
+    height: var(--global-footer-height);
     bottom: 0;
     width: 100%;
   }
