--- a/client/TaskHeroes/src/app/shared/ui-components/messenger/messenger-layout/messenger-layout.component.scss
+++ b/client/TaskHeroes/src/app/shared/ui-components/messenger/messenger-layout/messenger-layout.component.scss
@@ -1,7 +1,14 @@
+:host {
+  display: flex;
+  flex: 1;
+  height: 100%;     /* Fill the parent wrapper */
+  min-height: 0;    /* Prevents expanding beyond 701px */
+  overflow: hidden; 
+}
 .messenger-layout {
   display: flex;
   width: 100%;
-  height: calc(100vh - 64px); // Adjust 64px to your header height
+  height: 100%;
   background-color: #fff;
   overflow: hidden;
 
